# bioroad_v2_streamlit

./: .env  .gitignore  main.py  mulilang_code.py  pyproject.toml  requirements.txt
banana_faiss_index/: index.faiss  index.pkl
code/: banana_disease_detection.py  config.py  create_faiss_index.py  detection.py  leaf_counter.py  main.py  models.py  translate.py  utils.py
history/: 0f445150-d0a4-4d61-a3c5-5e198c4f29ea.json  11376165-b0e4-493f-bd3c-68753567acf9.json  1924eaa9-38a7-4b7a-ab12-9d37d7cc0c51.json  1d2a9f9d-c452-4d21-83bd-92d54f918b8f.json  2fbb7fe4-940e-4b6d-8ad9-00e8daad6db1.json  3a4e11b8-022a-4fc5-8484-d6fb95650801.json  4bbbdbc2-0e56-4f6d-bbdd-b5b4f9827d6f.json  4ecca84e-0434-4cee-ad5b-4cc1a2026785.json  52e440b3-38b8-4a2a-bdb5-4dc3ef384364.json  54a77bdf-8d98-4b46-9fc4-9818d9798d1a.json  692f23d2-257c-4b14-97ee-c1cef3d8e680.json  81effc05-dd2e-42ca-8c70-2d9ace715ade.json  889d54f4-0782-434e-b700-b4f6c3106caf.json  8b64a281-b5d3-4a50-af4a-34c7485398da.json  a46c0601-4088-431a-9833-a8dc3f85bb29.json  a94b9f6a-560c-49fa-8285-c5de0219c3c3.json  b5e9f35f-8bc8-4458-93b8-5f4c431319f5.json  bf27d5e5-d3fe-4eb4-9156-5933132f4272.json  bf49c5c3-cb38-4e0c-b3ef-23cd4bb17516.json  c429f967-4bf7-49a0-af1a-1b1282a9541e.json  c570ba0f-f94a-4f3b-a2c7-ebe8fe2185d7.json  c8129fa9-389d-4a8a-a17c-d48b10928f87.json  c8a6b8e0-e244-4ec3-a68c-8330f8e7e981.json  cd80dd24-1d86-4976-bd7d-0ac40a06f15e.json  cdd05a57-05ea-4814-8453-4ee906c381c6.json  cfe5fca9-8efe-43b3-9bfd-55b8d82900ec.json  d2561e4c-42e3-421d-9ec0-3e1a09b46bc3.json  e584f4be-1d53-49f3-a4be-f1e0ff5fe36f.json  (+2 more)
(+6 files in other folders)
